--- a/webpage.html
+++ b/webpage.html
@@ -9,12 +9,11 @@
 				display: block;
 		}
 		body{
-		
 	}
 </head>
 <body>
 	<header>
-		<img src="images/logo.jpg" alt="Town Hall Logo" width="80">
+		<img src="images/C:\Users\Admin\Desktop\yen.jpg" alt="Town Hall Logo" width="80">
 		<hgroup>
 			<h1>San Joaquin Valley Town Hall</h1>
 			<h2>Bringing cutting edge speakers to the valley</h2>
