--- a/Follow us.html
+++ b/Follow us.html
@@ -12,7 +12,7 @@
 	</style>
 
 </head>
-<!-- <body>
+<body>
 	<p align="left ">
 	<span class="general" > FOLLOW US </span>
 		<hr  width=80%" size="2px" align="left" color="black">
@@ -28,7 +28,7 @@
 		<center><h2 style="color: white">FOLLOWERS</h2></center>
 	</div>
 </p>
-</p> -->
+</p>
 
 
 
